force-app/main/default/objects/vlocity_cmt__Premises__c/fields/ARTL_Pincode__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>ARTL_Pincode__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>