force-app/main/default/objects/vlocity_cmt__Premises__c/fields/Identifier_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>Identifier_AutoNumber__c</fullName>
    <description>Used in backend for unique values, to be populated in External Id if blank.</description>
    <displayFormat>{0}</displayFormat>
    <label>Identifier AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>