force-app/main/default/objects/vlocity_cmt__Premises__c/validationRules/ARTL_Address_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_Address_Mandatory</fullName>
    <active>true</active>
    <description>Make Address field Mandatory SFDC-3504</description>
    <errorConditionFormula>OR(ISBLANK(vlocity_cmt__StreetAddress__c),ISBLANK(vlocity_cmt__PostalCode__c))</errorConditionFormula>
    <errorMessage>A valid Pincode and Street Address is mandatory</errorMessage>
</ValidationRule>